--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whatsapp</title>
+    <title>WhatsApp</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./img/whatsapp-logo.svg">
 </head>
 
 <body>
@@ -16,6 +17,11 @@
                 <figure class="sidebar__profile-picture">
                     <img height="40" width="40" src="./img/profile-picture.png" alt="profile-picture" />
                 </figure>
+
+                <img height="40" width="40" src="" alt="a">
+                <img height="40" width="40" src="" alt="a">
+                <img height="40" width="40" src="" alt="a">
+                <img height="40" width="40" src="" alt="a">
 
             </nav>
 
