--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </nav>
 
             <section class="sidebar-search-area">
-                <form class="sidebar-search-area__search-container" title="Search input textbox">
+                <form class="sidebar-search-area__search-container" title="Search input textbox" tabindex="0">
                     <img class="sidebar-search-area__search-icon" src="./img/magnifying-glass.svg" width="15" height="15">
                     <input type="text" class="sidebar-search-area__textbox" placeholder="Search or start new chat">
                 </form>
@@ -51,8 +51,10 @@
                     </figure>
 
                     <section class="sidebar-chat__message-area">
-                        <span class="sidebar-chat__message-sender">Aurora Asknes</span>
-                        <p class="sidebar-chat__message-text">Do you want to be a friend of the cartel?</p>
+                        <span class="sidebar-chat__message-sender">Aurora Asksnes</span>
+                        <div class="sidebar-chat__message-container">
+                            <p class="sidebar-chat__message-text">Do you want to be a friend of the cartel?????????</p>
+                        </div>
                     </section>
                 </li>
                 <li class="sidebar-chat">
@@ -62,8 +64,11 @@
 
                     <section class="sidebar-chat__message-area">
                         <span class="sidebar-chat__message-sender">Kim</span>
-                        <img src="./img/seen.svg" width="20" height="20" alt="seen">
-                        <p class="sidebar-chat__message-text">You: It's all good man</p>
+                        
+                        <div class="sidebar-chat__message-container">
+                            <img src="./img/seen.svg" width="20" height="20" alt="seen">
+                            <p class="sidebar-chat__message-text">You: It's all good man</p>
+                        </div>
                     </section>
                 </li>
                 <li class="sidebar-chat">
@@ -72,8 +77,10 @@
                     </figure>
                     <section class="sidebar-chat__message-area">
                         <span class="sidebar-chat__message-sender">Walter White</span>
-                        <img src="./img/seen.svg" width="20" height="20" alt="seen">
-                        <p class="sidebar-chat__message-text">You: you call anonymously</p>
+                        <div class="sidebar-chat__message-container">
+                            <img src="./img/seen.svg" width="20" height="20" alt="seen">
+                            <p class="sidebar-chat__message-text">You: you call anonymously</p>
+                        </div>
                     </section>
                 </li>
                 <li class="sidebar-chat">
@@ -82,7 +89,9 @@
                     </figure>
                     <section class="sidebar-chat__message-area">
                         <span class="sidebar-chat__message-sender">Mike</span>
-                        <p class="sidebar-chat__message-text">This is what's gonna happen</p>
+                        <div class="sidebar-chat__message-container">
+                            <p class="sidebar-chat__message-text">This is what's gonna happen</p>
+                        </div>
                     </section>
                 </li>
                 <li class="sidebar-chat">
@@ -91,7 +100,9 @@
                     </figure>
                     <section class="sidebar-chat__message-area">
                         <span class="sidebar-chat__message-sender">Lalo Salamanca</span>
-                        <p class="sidebar-chat__message-text">klah</p>
+                        <div class="sidebar-chat__message-container">
+                            <p class="sidebar-chat__message-text">Is there any chance, and I know the answer is probably no, but is it possible for me to meet the owner?</p>
+                        </div>
                     </section>
                 </li>
                 <li class="sidebar-chat">
@@ -100,15 +111,29 @@
                     </figure>
                     <section class="sidebar-chat__message-area">
                         <span class="sidebar-chat__message-sender">Chuck</span>
-                        <img src="./img/seen.svg" width="20" height="20" alt="seen">
-                        <p class="sidebar-chat__message-text">You: Tell me why</p>
+                        <div class="sidebar-chat__message-container">
+                            <img src="./img/seen.svg" width="20" height="20" alt="seen">
+                            <p class="sidebar-chat__message-text">You: Tell me why</p>
+                        </div>
                     </section>
                 </li>
             </ul>
 
         </aside>
         <section class="chat">
+            <nav class="chat-nav">
+                <figure class="sidebar-nav__profile-picture-container img-container circle">
+                    <img class="img--circle" height="40" width="40" src="./img/profile-picture.png" alt="profile-picture" />
+                </figure>
 
+                <button class="btn circle sidebar-nav__btn">
+                    <img class="sidebar-nav__icon" title="Community" src="./img/people.svg" type="">
+                </button>
+
+                <button class="btn circle sidebar-nav__btn">
+                    <img class="sidebar-nav__icon circle" title="Status" src="./img/circle.svg" type="">
+                </button>
+            </nav>
         </section>
     </main>
 </body>
